--- a/template1/main.html
+++ b/template1/main.html
@@ -1,58 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- CSS STYLE SHEET-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Template</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <div class="header">
-            <h1>Let's start <span>getting a little</span> more fancy!</h1>
-            <img src="landscape.jpg" alt="Forest Landscape">
+      <div class="header" id="head">
+        <h1>Let's start <span>getting a little</span> more fancy!</h1>
+        <img src="landscape.jpg" alt="Forest Landscape" />
+      </div>
+      <div class="middleSection flex-container">
+        <div class="flex-item-1">
+          <h2>Dolor Sit</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
+            deleniti, laudantium, rem alias quae nisi vel soluta blanditiis sint
+            nostrum consectetur libero voluptates ea consequatur quibusdam,
+            distinctio incidunt. Beatae, iure!
+          </p>
         </div>
-        <div class="middleSection flex-container">
-            <div class="flex-item-1">
-                <h2>Dolor Sit</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis deleniti, laudantium, rem alias
-                    quae nisi vel soluta blanditiis sint nostrum consectetur libero voluptates ea consequatur quibusdam,
-                    distinctio incidunt. Beatae, iure!</p>
-            </div>
-            <div class="flex-item-2">
-                <h2>Consectetur adipisicing</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis deleniti, laudantium, rem alias
-                    quae nisi vel soluta blanditiis sint nostrum consectetur libero voluptates ea consequatur quibusdam,
-                    distinctio incidunt. Beatae, iure!<br>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt
-                    modi odit impedit dolores autem reprehenderit sed eaque est, illum vitae, praesentium atque
-                    dignissimos officia. Alias totam nam quasi voluptas veniam!</p>
-            </div>
-            <div class="flex-item-1 color-bg">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis quasi, repellat velit dignissimos,
-                    maxime aliquam necessitatibus aspernatur nihil itaque sunt veniam vel odio non dicta, dolore unde
-                    voluptas. Eaque, minus.</p>
-            </div>
+        <div class="flex-item-2">
+          <h2>Consectetur adipisicing</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
+            deleniti, laudantium, rem alias quae nisi vel soluta blanditiis sint
+            nostrum consectetur libero voluptates ea consequatur quibusdam,
+            distinctio incidunt. Beatae, iure!<br />Lorem ipsum dolor sit, amet
+            consectetur adipisicing elit. Sunt modi odit impedit dolores autem
+            reprehenderit sed eaque est, illum vitae, praesentium atque
+            dignissimos officia. Alias totam nam quasi voluptas veniam!
+          </p>
         </div>
-        <div class="lowerSection flex-container">
-            <div class="flex-item-3">
-                <h2>Dolores mollit animm id est labroum</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi et nobis facilis necessitatibus
-                    reprehenderit, voluptatem aperiam dolore. A molestiae, voluptatem cum ratione esse provident,
-                    beatae, ipsam autem assumenda et debitis! Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Temporibus qui, explicabo nemo eveniet reiciendis illum id quis porro tempore maiores harum dolor
-                    expedita repellat ipsam debitis repellendus saepe ullam commodi.</p>
-            </div>
-            <div class="flex-item-1 color-bg">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae rerum quae minima ipsa? Fuga
-                    deleniti accusamus, officiis similique fugiat suscipit eaque sed dolore quos odit, dolor, tenetur
-                    error id! Aspernatur.</p>
-            </div>
+        <div class="flex-item-1 color-bg">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis quasi,
+            repellat velit dignissimos, maxime aliquam necessitatibus aspernatur
+            nihil itaque sunt veniam vel odio non dicta, dolore unde voluptas.
+            Eaque, minus.
+          </p>
         </div>
+      </div>
+      <div class="lowerSection flex-container">
+        <div class="flex-item-3">
+          <h2>Dolores mollit animm id est labroum</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi et
+            nobis facilis necessitatibus reprehenderit, voluptatem aperiam
+            dolore. A molestiae, voluptatem cum ratione esse provident, beatae,
+            ipsam autem assumenda et debitis! Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Temporibus qui, explicabo nemo eveniet
+            reiciendis illum id quis porro tempore maiores harum dolor expedita
+            repellat ipsam debitis repellendus saepe ullam commodi.
+          </p>
+        </div>
+        <div class="flex-item-1 color-bg">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae
+            rerum quae minima ipsa? Fuga deleniti accusamus, officiis similique
+            fugiat suscipit eaque sed dolore quos odit, dolor, tenetur error id!
+            Aspernatur.
+          </p>
+        </div>
+      </div>
     </div>
-</body>
-
+    <script src="index.js"></script>
+  </body>
 </html>
